fixed login wave on Safari

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -25,7 +25,7 @@
 
     .wave_img {
         width: 100%;
-        position: absolute;
+        position: fixed;
         bottom: 0;
     }
 
